--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+/*
+BASE STYLES
+*/
+
 html {
   box-sizing: border-box;
 }
@@ -21,6 +25,90 @@ button {
 h3 {
   font-size: 1.375em;
 }
+
+
+/*
+ICON FONTS
+*/
+
+@font-face {
+  font-family: 'ico-fonts';
+  src:url('/fonts/ico-fonts.eot?ghgy45');
+  src:url('/fonts/ico-fonts.eot?#iefixghgy45') format('embedded-opentype'),
+    url('fonts/ico-fonts.ttf?ghgy45') format('truetype'),
+    url('fonts/ico-fonts.woff?ghgy45') format('woff'),
+    url('fonts/ico-fonts.svg?ghgy45#ico-fonts') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  font-family: 'ico-fonts';
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-gear:before {
+  content: "\e601";
+}
+.icon-envelope:before {
+  content: "\e602";
+}
+.icon-lab:before {
+  content: "\e600";
+}
+.icon-google-plus:before {
+  content: "\e603";
+}
+.icon-facebook:before {
+  content: "\e604";
+}
+.icon-twitter:before {
+  content: "\e605";
+}
+.icon-dribbble:before {
+  content: "\e606";
+}
+.icon-linkedin2:before {
+  content: "\e607";
+}
+.icon-menu:before {
+  content: "\e60f";
+}
+.icon-drop:before {
+  content: "\e60e";
+}
+.icon-plus:before {
+  content: "\e608";
+}
+.icon-chevron-left:before {
+  content: "\e609";
+}
+.icon-chevron-right:before {
+  content: "\e60a";
+}
+.icon-brush:before {
+  content: "\e60b";
+}
+.icon-phone:before {
+  content: "\e60c";
+}
+.icon-pin:before {
+  content: "\e60d";
+}
+
+
+/*
+PRICING COMPONENTS
+*/
 
 .pricing-header {
 
