--- a/css/style.css
+++ b/css/style.css
@@ -10,15 +10,17 @@ html {
   box-sizing: inherit;
 }
 
-body {
-  font-family: "helvetica neue", arial, sans-serif;
+body, button {
   font-size: 16px;
   color: #fff;
+}
+
+body {
+  font-family: "helvetica neue", arial, sans-serif;
   background-color: #fff;
 }
 
 button {
-  color: #fff;
   background-color: #fd6632;
   border: none;
 }
@@ -148,7 +150,7 @@ PRICING COMPONENTS
 */
 
 [class^="pricing"] {
-  font-size: 1rem;
+  /*font-size: 1em;*/
   text-align: center;
 }
 
@@ -235,3 +237,51 @@ li[class^="pricing"] {
     width: auto;
   }
 }
+
+
+/*
+SERVICES COMPONENTS
+*/
+
+.services-text {
+  font-size: 1.333em;
+  line-height: 1.4;
+}
+
+.services-category {
+  width: 19em;
+  text-align: center;
+  background-color: #fd6632;
+}
+
+.services-header {
+  padding-bottom: .8em;
+}
+
+[data-title="ux-design"]:after {
+  content: "\e60b";
+}
+
+[data-title="laboratory"]:after {
+  content: "\e600";
+}
+
+[data-title="development"]:after {
+  content: "\e601";
+}
+
+.services-header:after {
+  display: block;
+  width: 2em;
+  height: 2em;
+  margin: .4em auto 0;
+  padding-top: .5em;
+  padding-bottom: .5em;
+  font-family: 'ico-fonts';
+  font-size: 2em;
+  text-align: center;
+  color: #2e2e2e;
+  background-color: #fff;
+  border-radius: 50%;
+}
+
