--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,12 @@ button {
   border: none;
 }
 
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
 
 /*
 MODIFIERS
@@ -96,6 +102,9 @@ ICON FONTS
 }
 .icon-lab:before {
   content: "\e600";
+}
+.icon-arrow-down:before {
+  content: "\e610";
 }
 .icon-google-plus:before {
   content: "\e603";
@@ -165,6 +174,78 @@ SECTION HEADERS
     margin: 0 6em;
     padding: 1.333em 2em;
     background-size: 28%;
+  }
+}
+
+
+/*
+SERVICES COMPONENTS
+*/
+
+.services-container {
+  max-width: 940px;
+  padding: 0 .5em;
+  text-align: center;
+  background-color: #fd6632;
+}
+
+.services-text {
+  display: inline-block;
+  padding: .5em 0;
+  font-size: 1.333em;
+  line-height: 1.4;
+}
+
+.services-category {
+  padding: 1.333em;
+}
+
+.services-header {
+  padding: .5em 0;
+}
+
+[data-title="ux-design"]:after {
+  content: "\e60b";
+}
+
+[data-title="laboratory"]:after {
+  content: "\e600";
+}
+
+[data-title="development"]:after {
+  content: "\e601";
+}
+
+.services-header:after {
+  display: block;
+  width: 2em;
+  height: 2em;
+  margin: .4em auto 0;
+  padding-top: .5em;
+  padding-bottom: .5em;
+  font-family: 'ico-fonts';
+  font-size: 2em;
+  text-align: center;
+  color: #2e2e2e;
+  background-color: #fff;
+  border-radius: 50%;
+}
+
+@media screen and (min-width: 50em) {
+  .services-category-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-content: center;
+  }
+
+  .services-text {
+    padding: 1em;
+    font-size: 1em;
+  }
+
+  .services-category {
+    width: 33%;
   }
 }
 
@@ -248,6 +329,59 @@ li[class^="pricing"] {
 
 
 /*
+PORTFOLIO COMPONENTS
+*/
+
+.portfolio-slider-figure {
+  position: relative;
+}
+
+.portfolio-slider-figure img {
+  min-width: 33em;
+}
+
+.portfolio-slider-overlay {
+  opacity: .7;
+}
+
+.portfolio-slider-caption {
+  position: absolute;
+  top: 2%;
+  left: 5%;
+  width: 90%;
+  line-height: 1.1;
+  text-shadow: 1px 1px 5px #2e2e2e;
+}
+
+.portfolio-slider-caption p {
+  font-size: 1.333em;
+}
+
+.portfolio-slider-button {
+  background-image: linear-gradient(#4dbff7, #5087c8);
+  padding: 1em 1em;
+  margin: .8em 0;
+}
+
+.portfolio-slider-button:before,
+.portfolio-slider-button:after {
+  font-family: "ico-fonts";
+}
+
+
+.portfolio-slider-button:after {
+  content: "\e60a";
+  padding-left: 1.333em;
+}
+
+.portfolio-slider-button:before {
+  content: "\e610";
+  padding-right: 1em;
+  color: rgba(0,0,0,.3);
+}
+
+
+/*
 TEAM
 */
 
@@ -310,75 +444,4 @@ TEAM
 
 .icon-google-plus {
   background-color: #fabc00;
-}
-
-
-/*
-SERVICES COMPONENTS
-*/
-
-.services-container {
-  max-width: 940px;
-  padding: 0 .5em;
-  text-align: center;
-}
-
-.services-text {
-  display: inline-block;
-  padding: .5em 0;
-  font-size: 1.333em;
-  line-height: 1.4;
-}
-
-.services-category {
-  /*width: 19em;*/
-  padding: 1.333em;
-}
-
-.services-header {
-  padding: .5em 0;
-}
-
-[data-title="ux-design"]:after {
-  content: "\e60b";
-}
-
-[data-title="laboratory"]:after {
-  content: "\e600";
-}
-
-[data-title="development"]:after {
-  content: "\e601";
-}
-
-.services-header:after {
-  display: block;
-  width: 2em;
-  height: 2em;
-  margin: .4em auto 0;
-  padding-top: .5em;
-  padding-bottom: .5em;
-  font-family: 'ico-fonts';
-  font-size: 2em;
-  text-align: center;
-  color: #2e2e2e;
-  background-color: #fff;
-  border-radius: 50%;
-}
-
-@media screen and (min-width: 50em) {
-  .services-category-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-content: center;
-  }
-
-  .services-text {
-    padding: 1em;
-    font-size: 1em;
-  }
-
-  .services-category {
-    width: 33%;
 }
